# ETH_KL

./: LICENSE  README.md
frontend/: next.config.mjs  package.json  tsconfig.json
frontend/public/.well-known/: walletconnect.txt
frontend/src/: abi.js
frontend/src/app/: globals.css  layout.tsx  myconfig.json  page.tsx
frontend/src/app/Presentation/: page.tsx  styles.css
frontend/src/app/api/projects/: route.ts
frontend/src/app/api/prove/: route.ts
frontend/src/app/api/verify/: route.ts
frontend/src/app/components/Footer/: Footer.css  Footer.tsx
frontend/src/app/components/ListProjects/: ListProjects.module.css  ListProjects.tsx
frontend/src/app/components/Nav/: Nav.css  Nav.tsx
frontend/src/app/components/SigDecode/: SigDecode.tsx
frontend/src/app/components/Vote/: Vote.ts
frontend/src/config/: index.tsx
frontend/src/context/: index.tsx
frontend/src/utils/: verifySignature.ts
smartcontract/: HackathonVoting.sol
tlsn-plugin-boilerplate/: README.md  config.json
tlsn-plugin-boilerplate/src/: index.ts
tlsn-plugin-boilerplate/src/utils/: hf.js
tlsn/crates/data-fixtures/data/http/: response_empty_header  (+1 more)
tomaru/: .gitignore  .gitmodules  README.md
tomaru/semaphore/: .gitignore  package-lock.json  package.json
tomaru/semaphore/apps/contracts/: hardhat.config.ts  package.json  remappings.txt
tomaru/semaphore/apps/web-app/: .env.development  .env.production  next.config.mjs  package.json
tomaru/tlsn-verifier/: Cargo.toml
tomaru/tlsn-verifier/fixture/: verifier.key  verifier.pub
tomaru/tlsn-verifier/src/: lib.rs  main.rs
(+20 files in other folders)
